<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynaarm_gamepad_interface</name>
  <version>1.0.0</version>
  <description>Modular gamepad interface for DynaArm using ROS 2.</description>

  <author email="tschwarzer@duatic.com">Timo Schwarzer</author>
  <maintainer email="tschwarzer@duatic.com">Timo Schwarzer</maintainer>
  <license>BSD 3-Clause</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
